# textbytesencoder

./: README.md  pyproject.toml  setup.py  tox.ini
textbytesencoder/: __init__.py  textbytesencoder.py
